<resources>

    <!-- app管理 -->
    <array name="choice">
    	<item name="start">启动程序</item>
    	<item name="detail">详细信息</item>
    	<item name="uninstall">卸载程序</item>
    </array>
    <array name="detail_choice">
    	<item name="start">运行</item>
    	<item name="uninstall">卸载</item>
    	<item name="back">返回</item>
    </array>
    
    <string name="app_name">菜鸟游戏</string>
    <string name="underline"><u>忘记密码?</u></string>
    <string name="registration_protocol"><u>菜鸟游戏注册协议</u></string>
    <!-- Xlistview -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="category_title_character">角色扮演</string>
    <string name="category_newest_bt">最新</string>
    <string name="category_hotest_bt">最热</string>
    <string name="category_activity_item_bt">下载</string>
    <string name="I_want_to_comment">我要评价</string>
    <string name="submit">提交</string>
    <string name="sharephoto_content">请填写你要分享的内容</string>
    <string name="photograph">照相</string>
    <string name="photo_album">相册</string>
    <string name="cancel1">取消</string>
    <string name="comment">评论</string>
    <string name="savephoto">保存照片</string>
    <string name="sharephoto">分享照片</string>
    <!-- personalCenter -->
    <string name="personal_center_username">昵称 :</string>
    <string name="personal_center_integral">积分 :</string>
    <string name="personal_center_gold">金币 :</string>
    <string name="personal_center">个人中心</string>
    <string name="personal_center_recharge">充值</string>
    <string name="personal_center_edit">编辑</string>
    <string name="personal_center_edit_finsh">完成</string>
    <string name="personal_center_fund_friends">"查找好友"</string>
    <string name="personal_center_focus_projects">关注专题</string>
    <string name="personal_center_focus_games">关注游戏</string>
    <string name="personal_center_fcous_user">关注用户</string>
    <string name="personal_center_fcous_user_fcous_me">关注我的</string>
    <string name="personal_center_fcous_user_fcous">关注</string>
    <string name="personal_center_fund_friends_serch">"搜索好友"</string>
    <string name="personal_center_fund_friends_serch_phone">"搜索通讯录好友"</string>
    <string name="personal_center_updatpic">上传头像</string>
    <string name="personal_center_nickname">昵称：</string>
    <string name="personal_center_nickname_nick">nick</string>
    <string name="personal_center_youxiang">邮箱：</string>
    <string name="personal_center_youxinged">qq.com</string>
    <string name="personal_center_phonenumber">电话号码：</string>
    <string name="personal_center_phonenumbered">138********</string>
    <string name="personal_center_qq">QQ</string>
    <string name="personal_center_qq_ed">108********</string>
    <string name="personal_center_adress">地址</string>
    <string name="personal_center_adress_ed">银河系太阳系地球公民</string>
    <string name="integral">签到</string>
    
    <string name="more">更多</string>
    <string name="sm_item_demo">接口</string>
    <string name="sm_item_auth">授权</string>
    <string name="sm_item_wechat">微信</string>
    <string name="sm_item_yixin">易信</string>
    <string name="sm_item_customer">自定义接口</string>
    <string name="sm_item_custom_fields">自定义分享内容</string>
    <string name="sm_item_fl_weibo">关注新浪微博</string>
    <string name="sm_item_fl_tc">关注腾讯微博</string>
    <string name="sm_item_share_view">摇一摇截屏分享</string>
    <string name="sm_item_visit_website">关注官方网站</string>
    <string name="sm_item_about">Demo版本 Ver. %s</string>
    <string name="plz_choose_wechat">请选择微信客户端完成操作</string>
    <string name="get_token_format">获取%s的AccessToken</string>
    <string name="get_user_info_format">获取%s授权用户资料</string>
    <string name="get_other_info_format">获取%s其他用户资料</string>
    <string name="share_to_format">分享到%s</string>
    <string name="demo_share_all_gui">分享全部（有分享界面）</string>
    <string name="demo_share_all">分享全部（无界面，直接分享）</string>
    <string name="demo_get_access_token">获取AccessToken</string>
    <string name="demo_get_my_info">获取授权用户资料</string>
    <string name="demo_get_other_info">获取其他用户资料</string>
    <string name="get_sina_friends_list">获取新浪微博关注列表</string>
    <string name="get_tencent_friends_list">获取腾讯微博关注列表</string>
    <string name="customer_douban">搜索用户</string>
    <string name="customer_facebook">获取通知列表</string>
    <string name="customer_nemb">获取推荐话题</string>
    <string name="customer_renren">上传照片到用户的相册</string>
    <string name="customer_sina">获取微博主页列表</string>
    <string name="customer_qzone">发表日志到QQ空间</string>
    <string name="customer_tencent">获取我的粉丝列表</string>
    <string name="customer_twitter">获取主页列表</string>
    <string name="customer_kaixin">获取可能认识的人</string>
    <string name="customer_sohu">获取好友列表</string>
    <string name="customer_youdao">获取笔记本列表</string>
    <string name="customer_suishenkan">获取搜狐随身看书签列表</string>
    <string name="customer_tumblr">获取Tumblr用户Post列表</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="share_content">菜鸟官网http://www.gamept.cn/游戏平台，有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据.</string>
    <string name="share_content_short">菜鸟官网http://www.gamept.cn/游戏平台，有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据.</string>
    <string name="evenote_title">菜鸟游戏</string>
    <string name="update">文字分享</string>
    <string name="image_upload">图片分享（本地图片）</string>
    <string name="image_upload_bitmap">图片分享（Bitmap对象）</string>
    <string name="image_upload_url">图片分享（网络图片）</string>
    <string name="emoji_upload">表情分享（本地图片）</string>
    <string name="emoji_upload_url">表情分享（网络图片）</string>
    <string name="emoji_upload_bm">表情分享（Bitmap对象）</string>
    <string name="music_upload">音乐分享</string>
    <string name="video_upload">视频分享</string>
    <string name="webpage_upload">网页分享（本地图片）</string>
    <string name="webpage_upload_bitmap">网页分享（Bitmap对象）</string>
    <string name="webpage_upload_url">网页分享（网络图片）</string>
    <string name="app_upload">应用分享（携带文件）</string>
    <string name="app_upload_extinfo">应用分享（携带脚本）</string>
    <string name="file_upload">文件分享</string>
    <string name="share_to_wechat">微信好友</string>
    <string name="share_to_moment">微信朋友圈</string>
    <string name="share_to_favorite">微信收藏</string>
    <string name="wechat_demo_title">微信分享Demo标题</string>
    <string name="qzone_add_blog_sample"><h1>QQ互联</h1><font color="red">轻松分享,</font><font color="green">快乐生活。</font><a href="http://connect.qq.com">详情请看。</a><img src="http://imgcache.qq.com/ptlogin/head/1_100.gif"></img></string>
    <string name="wechat_client_is_not_installed_correctly">微信客户端未安装或版本太旧</string>
    <string name="wechat_client_not_support_following_operation">微信客户端不支持第三方应用执行关注功能</string>
    <string name="share_to_yixin">易信好友</string>
    <string name="share_to_yixin_moment">易信朋友圈</string>
    <string name="share_to_yixin_favorite">易信收藏</string>
    <string name="yixin_demo_title">易信分享Demo标题</string>
    <string name="receive_rewards">恭喜你得到%s个金币！</string>
    <string name="buy_success">购买成功</string>
    <string name="buy_failed">购买失败</string>
    <string name="laiwang">来往</string>
    <string name="qzone_customer_share_style">自定义QQ空间分享风格</string>
    <string name="qq_share_way">请选择分享方式</string>
    <string name="qq_share_from_qqlogin">QQ/QZone登录发微博</string>
    <string name="qq_share_from_tlogin">腾讯微博登录发微博</string>

</resources>