<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/personage_center"
    android:orientation="vertical" >

    <RelativeLayout style="@style/title_bar_style" >

        <TextView
            android:id="@+id/personalgameback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/left_arrow_selecter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <Button
            android:id="@+id/editor_finsh"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/personnal_center_edit_selecter"
            android:text="@string/personal_center_edit_finsh"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/userpic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/userpic"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_marginRight="80dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/view1"
                    android:layout_alignParentLeft="true"
                    android:text="@string/personal_center_updatpic" />

                <TextView
                    android:id="@+id/personal_center_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/nickname" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_below="@id/personal_center_username"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/whitecorners"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/nicknameindx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/personal_center_nickname" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/nicknameindx"
                android:background="@null"
                android:hint="@string/personal_center_nickname_nick"
                android:paddingLeft="10dp"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CDCDCD" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/gameindx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/personal_center_youxiang" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/gameindx"
                android:background="@null"
                android:hint="@string/personal_center_youxinged"
                android:paddingLeft="10dp"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CDCDCD" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/personal_center_phonenumber" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/phonenumber"
                android:background="@null"
                android:hint="@string/personal_center_phonenumbered"
                android:paddingLeft="10dp"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CDCDCD" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/personal_center_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/personal_center_qq" />

            <EditText
                android:id="@+id/personal_center_qq_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/personal_center_qq"
                android:background="@null"
                android:hint="@string/personal_center_qq_ed"
                android:paddingLeft="10dp"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CDCDCD" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/personal_center_adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/personal_center_adress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/personal_center_adress"
                android:background="@null"
                android:hint="@string/personal_center_adress_ed"
                android:paddingLeft="10dp"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>