<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10" >

        <include layout="@layout/common_title_bar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="4" >

            <ImageView
                android:id="@+id/iv_add_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/defaultadd_pic" />
        </RelativeLayout>

        <EditText
            android:id="@+id/comment_or_relpy_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="3.5"
            android:background="@drawable/edittext_bg"
            android:gravity="top|left"
            android:hint="@string/sharephoto_content"
            android:maxLines="5" />

        <Button
            android:id="@+id/I_want_to_comment"
            style="@style/bt_style"
            android:text="@string/submit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popupwindow"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/popupwindow_bg"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/photograph"
            style="@style/bt_style"
            android:text="@string/photograph" />

        <Button
            android:id="@+id/photo_album"
            style="@style/bt_style"
            android:text="@string/photo_album" />

        <Button
            android:id="@+id/cancel"
            style="@style/bt_style"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>