<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/personage_center"
    android:orientation="vertical" >

    <RelativeLayout style="@style/title_bar_style" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/user_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <Button
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/personnal_center_edit_selecter"
            android:text="@string/personal_center_edit"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/userpic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/bt_Recharge"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/guanzhu"
            android:text="@string/personal_center_recharge" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@id/bt_Recharge"
            android:layout_toRightOf="@id/userpic"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/view1"
                    android:layout_alignParentLeft="true"
                    android:text="@string/personal_center_username" />

                <TextView
                    android:id="@+id/personal_center_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/nickname" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_below="@id/personal_center_username"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/integral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_center_integral" />

                <TextView
                    android:id="@+id/personal_center_integral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/integral" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_below="@id/integral"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_center_gold" />

                <TextView
                    android:id="@+id/personal_center_gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/gold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_below="@id/gold"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey" />
 

        <LinearLayout
                    android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/whitecorners" 
            android:orientation="vertical" >

            <TextView
                android:id="@+id/fcous_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="center_vertical"
                android:text="@string/personal_center_fcous_user" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CDCDCD" />

            <TextView
                android:id="@+id/focus_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/game"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="center_vertical"
                android:text="@string/personal_center_focus_games" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CDCDCD" />

            <TextView
                android:id="@+id/focus_projects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/zhuanti"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="center_vertical"
                android:text="@string/personal_center_focus_projects" />
        </LinearLayout>

    <TextView
        android:id="@+id/fund_friends"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/whitecorners"
        android:drawableLeft="@drawable/founf_friends"
        android:drawablePadding="20dp"
        android:drawableRight="@drawable/right_arrow"
        android:gravity="center_vertical"
        android:text="@string/personal_center_fund_friends" />

</LinearLayout>