<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/title_bar_style" >

        <TextView
            android:id="@+id/personaluserback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/left_arrow_selecter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_center_fcous_user"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/cateory_radoioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/category_newnest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/left_rd_button_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/personal_center_fcous_user_fcous"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/category_hotest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/left_rd_button_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/personal_center_fcous_user_fcous_me"
            android:textColor="@color/black" />
    </RadioGroup>

    <me.maxwin.view.XListView
        android:id="@+id/personal_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </me.maxwin.view.XListView>

</LinearLayout>